fixed overflow issues in projects section

--- a/assets/css/addedcss.css
+++ b/assets/css/addedcss.css
@@ -7,8 +7,13 @@ p{
 }
 .imagewrap{
     max-width: 15rem;
+    height: 15rem;
     align-self: flex-start;
     margin-right: 2.5rem;
+}
+.clientimages{
+    max-width: 20rem;
+    max-height: 15rem;
 }
 .hide{
     display: none;
@@ -64,7 +69,8 @@ a:visited{
     justify-content: center;
     flex-direction: column;
     align-items: flex-start;
-    height: 70vh;
+    
+
 }
 @media(min-width:1280px){
     .needawebsitebtnmobile{
